# xv6-rust

./: .gdbinit  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.cargo/: config
lib/file_control_lib/: Cargo.toml
lib/file_control_lib/src/: lib.rs
lib/file_system_lib/: Cargo.toml
lib/file_system_lib/src/: lib.rs
lib/param_lib/: Cargo.toml
lib/param_lib/src/: lib.rs
src/: console.rs  lib.rs  main.rs  param.rs  plic.rs  print.rs  riscv.rs  sleep_lock.rs  spin_lock.rs  start.rs  trap.rs  uart.rs
src/asm/: kernelvec.S
src/console/: mod.rs  uart.rs
src/driver/: virtio_disk.rs
src/file_system/: buffer_cache.rs  define.rs  directory.rs  elf.rs  inode.rs  logging.rs  mod.rs  path.rs
src/memory/: kernel_alloc.rs  kernel_heap.rs  kernel_virtual_memory.rs  layout.rs  mod.rs  page_table.rs  physical_memory.rs  user_virtual_memory.rs  virtual_memory.rs
src/mkfs/: mkfs.rs
src/process/: context.rs  cpu_manager.rs  mod.rs  process.rs  process_manager.rs  trap_frame.rs
src/syscall/: exec.rs  file.rs  mod.rs
user/: sh
