[package]
name = "xv6_rust"
version = "0.1.0"
authors = ["Gogo <gogo81745.moe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "1.0"
linked_list_allocator = "0.8"